--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         <li><a href="https://www.google.com/maps/place/Ben+Yehuda+St+22,+Tel+Aviv-Yafo/@32.0752428,34.7660052,17z/data=!3m1!4b1!4m5!3m4!1s0x151d4c87561b32d1:0x5ec60ee08df5f254!8m2!3d32.0752428!4d34.7681939">Familiy</a></li>
     </ul>
 </div>
- <div class="photos-main">
+ <!-- <div class="photos-main">
     <img class="photo" src="/assets/dog1.jpeg" alt="hiking">
     <img class="photo" src="/assets/dog2.jpeg" alt="snow">
     <img class="photo" src="/assets/dog3.jpeg" alt="snow">
- </div>
+ </div> -->
  <div class="list">
     <ul class="list-1">
         <li class="list-1child" id="placesILove" onclick="delayHandleClick('placesILove')">places i love</li>
